--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,7 +97,7 @@ nav a:focus {
 
 .search-button {
   padding: 0.75rem 1.5rem;
-  background-color: var(--accent-color);
+  background-color: #122431;
   color: white;
   border: none;
   border-radius: var(--border-radius);
@@ -251,7 +251,7 @@ nav a:focus {
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #7f8c8d;
+  color: #05191a;
   transition: var(--transition);
 }
 
