--- a/public/css/funzone.css
+++ b/public/css/funzone.css
@@ -57,12 +57,12 @@ a.play-btn {
 }
 
 button.preview-btn {
-  background: #ff9800;
+  background: #100101f0;
   color: white;
 }
 
 a.play-btn {
-  background: #2196f3;
+  background: #061b2c;
   color: white;
 }
 
