--- a/public/css/funzone.css
+++ b/public/css/funzone.css
@@ -10,7 +10,7 @@ body {
 header {
   text-align: center;
   padding: 2rem;
-  background-color: #4caf50;
+  background-color: #044206;
   color: white;
 }
 
