--- a/public/css/funzone.css
+++ b/public/css/funzone.css
@@ -14,6 +14,10 @@ header {
   color: white;
 }
 
+nav {
+  color: white;
+}
+
 main.game-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
