--- a/public/css/timetravel.css
+++ b/public/css/timetravel.css
@@ -48,7 +48,7 @@ input[type="number"]:focus {
 }
 
 button[type="submit"] {
-  background-color: #3498db;
+  background-color: #05141f;
   color: white;
   border: none;
   padding: 12px 24px;
@@ -186,7 +186,7 @@ button[type="submit"]:active {
   right: 15px;
   font-size: 24px;
   font-weight: bold;
-  color: #777;
+  color: darkblue;
   cursor: pointer;
   transition: color 0.3s;
 }
